--- a/testcode/templates/Student.html
+++ b/testcode/templates/Student.html
@@ -230,7 +230,8 @@
                     
                         <div id="container3">
                         
-                         <div id="textcode"><form><textarea id="code" name="code" cols="120" rows="400" style="background-color: #FFF"></textarea> </form> </div>
+                         <div id="textcode">
+                          <form method="post"><textarea id="code" name="code" cols="120" rows="400" style="background-color: #FFF"></textarea>{% csrf_token %}  </div>
                                   <script>
                                       var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
                                       mode: {name: "python",
@@ -248,12 +249,12 @@
                     </div>
                     <div id="containerbottom">                         
                               <div id="save"> 
-                                 <div class="btn-group in"> <button class="btn btn-success" type="button"> <i class="icon-ok icon-white"></i> Save & Run</button> </div>                                
+                                 <div class="btn-group in"> <input class="btn btn-success" type="submit" action="api/submit/" value="Save & Run"> <i class="icon-ok icon-white"></i> </div>                                
                                  <div class="btn-group in"> <button class="btn btn-danger" type="button"><i class="icon-refresh icon-white"></i> Reset</button> </div>
                               </div>
                         
                     </div>
-                    
+                    </form>
                     
                     
                 </div>
