Architecture change for login function - isOkay, error, and url all in json. Frontend redirects if isOkay, otherwise displays error message

--- a/testcode/templates/teacher-home.html
+++ b/testcode/templates/teacher-home.html
@@ -141,7 +141,7 @@
                     <div id="classes">
                         
                         <ul class="breadcrumb" id="rightm">
-                            <li>Your classes                            
+                            <li>Manage your classes                            
                            <div class="btn-group in" id="rightm"> <button class="btn add-classteacher" type="button" id="add-class" ><i class="icon-book" ></i> Add class</button> </div></li>                               
                            <div class="btn-group in"> <button class="btn create-classteacher" type="button" id="create-class"> <i class="icon-pencil"></i> Create class</button> </div>
                         </ul>
@@ -160,14 +160,14 @@
                      <div id="rightclass">
                          <table border="0" id="problemstable">
                              <tr>                                 
-                                 <td>1 lecture</td>
+                                 <td>1 lesson</td>
                                  <td >4 problems</td>
-                                 <td >45 users</td>
+                                 <td >45 students</td>
                             </tr>
                             <tr>                                 
-                                 <td>0 lectures</td>
+                                 <td>0 lessons</td>
                                  <td>0 problems</td>
-                                 <td >10 users</td>
+                                 <td >10 students</td>
                             </tr>
                          </table>
                             
@@ -185,11 +185,11 @@
                                  </td>
                                  <td>
                                         <ul class="breadcrumb" >
-                                        <li>Latest activity</li></ul>
+                                        <li>Your latest activity</li></ul>
                                  </td>
                                  <td>
                                         <ul class="breadcrumb" >
-                                        <li>Unsolved problems</li></ul>
+                                        <li>Latest student submissions</li></ul>
                                  </td>
                             </tr>
                             <tr>                                 
