Working login and registration. Display name on login.
Need to implement data verification. Need to start making templates for
everything else.

--- a/testcode/templates/teacher-home.html
+++ b/testcode/templates/teacher-home.html
@@ -3,21 +3,21 @@
   <head>
       <title> Prob</title>
       <link href='http://fonts.googleapis.com/css?family=Strait' rel='stylesheet' type='text/css'>
-      <link rel="stylesheet" type="text/css" href="static/text.css" />
-      <link href="static/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+      <link rel="stylesheet" type="text/css" href="/static/text.css" />
+      <link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
       <script src="http://code.jquery.com/jquery-latest.js"></script>
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.js"></script>
       <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
       <script src="http://jqueryui.com/resources/demos/external/jquery.bgiframe-2.1.2.js"></script>
-       <script src="static/bootstrap/js/bootstrap.js"></script>
-      <link rel="stylesheet" href="static/code/lib/codemirror.css">
-      <script src="static/code/lib/codemirror.js"></script>
-      <script src="static/code/lib/matchbrackets.js"></script>
-      <script src="static/code/python.js"></script>
-      <script type="text/javascript" src="static/java.js"></script>
-    <link rel="stylesheet" href="static/j-query.css" />
-      <script type="text/javascript" src="static/scroll/jquery.slimscroll.min.js"></script>
+       <script src="/static/bootstrap/js/bootstrap.js"></script>
+      <link rel="stylesheet" href="/static/code/lib/codemirror.css">
+      <script src="/static/code/lib/codemirror.js"></script>
+      <script src="/static/code/lib/matchbrackets.js"></script>
+      <script src="/static/code/python.js"></script>
+      <script type="text/javascript" src="/static/java.js"></script>
+    <link rel="stylesheet" href="/static/j-query.css" />
+      <script type="text/javascript" src="/static/scroll/jquery.slimscroll.min.js"></script>
       
       <style type="text/css">.CodeMirror {border: 1px solid #dfdfdf; border-bottom: 1px solid #dfdfdf;}</style>              
                
@@ -84,7 +84,7 @@
             <div id="headt">
               
                <div id="logo">
-                  <a href="#home"> <img src="static/logo1.png"> </a>
+                  <a href="#home"> <img src="/static/logo1.png"> </a>
                            
                        
                     
@@ -96,7 +96,7 @@
                   
                     <div class="navbar smalle">
                         <div class="navbar-inner">
-                               <a class="brand" href="#">Hi, Andrei Ivanov</a>
+                               <a class="brand" href="#">Hi, {{ user.name }}</a>
                          </div>
                         </div>
                                <ul class="nav">
