--- a/testcode/templates/Student.html
+++ b/testcode/templates/Student.html
@@ -90,7 +90,7 @@
                   
                     <div class="navbar smalle">
                         <div class="navbar-inner">
-                               <a class="brand" href="#">Hi, {{ user.name }}</a>
+                               <a class="brand" href="#">Hi, Andrei Ivanov</a>
                          </div>
                         </div>
                                <ul class="nav">
