--- a/testcode/templates/teacher-home.html
+++ b/testcode/templates/teacher-home.html
@@ -16,6 +16,7 @@
       <script src="/static/code/lib/matchbrackets.js"></script>
       <script src="/static/code/python.js"></script>
       <script type="text/javascript" src="/static/java.js"></script>
+      <script type="text/javascript" src="/static/teacher-home.js"></script>
     <link rel="stylesheet" href="/static/j-query.css" />
       <script type="text/javascript" src="/static/scroll/jquery.slimscroll.min.js"></script>
       
@@ -46,16 +47,18 @@
   </head>
   <body>
     
-        <div id="dialog-formclass" title="Create a class">
- 
+<div id="dialog-formclass" title="Create a class">
+     <p class="validateTips" id="create_message_box"></p>
              <form>
                 <fieldset>
-                    <label for="name">Class name</label>
-                    <input type="text" name="email" id="nameclass" class="text ui-widget-content ui-corner-all" />
+                    <label for="name">Class name <span style="font-size: 14px">(e.g. "6.01 Introduction to EECS"  )</span></label>
+                    <input type="text" name="email" id="classname" class="text ui-widget-content ui-corner-all" />
+                    <label for="name">Short name <span style="font-size: 14px">(e.g. "6.01")</span></label>
+                    <input type="text" name="email" id="shortclassname" class="text ui-widget-content ui-corner-all" />
                     <label for="password">Student password</label>
-                    <input type="password" name="password" id="passwordstudent" value="" class="text ui-widget-content ui-corner-all" />
+                    <input type="password" name="password" id="studentpassword" value="" class="text ui-widget-content ui-corner-all" />
                      <label for="password">Teacher password</label>
-                    <input type="password" name="password" id="passwordteacher" value="" class="text ui-widget-content ui-corner-all" />
+                    <input type="password" name="password" id="teacherpassword" value="" class="text ui-widget-content ui-corner-all" />
                                
                 </fieldset>
             </form>
@@ -70,9 +73,9 @@
              <form>
                 <fieldset>
                     <label for="name">Class ID</label>
-                    <input type="text" name="email" id="idclass" class="text ui-widget-content ui-corner-all" />
+                    <input type="text" name="class id" id="idclass" class="text ui-widget-content ui-corner-all" />
                     <label for="password">Password</label>
-                    <input type="password" name="password" id="passwordclass1" value="" class="text ui-widget-content ui-corner-all" />
+                    <input type="password" name="password" id="passwordclass" value="" class="text ui-widget-content ui-corner-all" />
                 </fieldset>
             </form>
         </div>
@@ -96,13 +99,13 @@
                   
                     <div class="navbar smalle">
                         <div class="navbar-inner">
-                               <a class="brand" href="#">Hi, {{ user.name }}</a>
+                               <a class="brand" href="#">Hi, {{user.name}}</a>
                          </div>
                         </div>
                                <ul class="nav">
-                                     <div class="btn-group in"><button class="btn" type="button"><i class="icon-home"></i> Home</button></div>
+                                     <div class="btn-group in"><button class="btn" type="button" id="homelink"><i class="icon-home"></i> Home</button></div>
                                      <div class="btn-group in"><button class="btn" type="button"><i class="icon-user"></i>  Account</button></div>
-                                    <div class="btn-group in"> <button class="btn" type="button"><i class="icon-off"></i> Logout</button></div>
+                                    <div class="btn-group in"> <button class="btn" type="button" id="logout"><i class="icon-off"></i> Logout</button></div>
                                    
                                </ul>
                  
@@ -142,35 +145,54 @@
                         
                         <ul class="breadcrumb" id="rightm">
                             <li>Manage your classes                            
-                           <div class="btn-group in" id="rightm"> <button class="btn add-classteacher" type="button" id="add-class" ><i class="icon-book" ></i> Add class</button> </div></li>                               
-                           <div class="btn-group in"> <button class="btn create-classteacher" type="button" id="create-class"> <i class="icon-pencil"></i> Create class</button> </div>
+                          <div class="btn-group in" id="rightm">  <!--<button class="btn add-classteacher" type="button" id="add-class" ><i class="icon-book" ></i> Add an existing class</button> </div> --></li>                               
+                           <div class="btn-group in"> <button class="btn create-classteacher" type="button" id="create-class"> <i class="icon-pencil"></i> Create a class</button> </div>
                         </ul>
                         
                     </div>
                     
                     <div id="listclass">
                         
-                        <ul class="nav nav-tabs nav-stacked">
-                            <li><a href="#">6.01 Introduction to EECS I</a></li>
-                            <li><a href="#">6.006 Introduction to Algorithms</a></li>
+                        {% if isNewUser %}
+                            <p class="empty"> You have no classes added. Use "Create a class" or "Add an existing class" button </p>
+                            <ul class="newuser">                     
+                           
+                            
+                           </ul>
+                        {% else %}
+                        
+                        <ul class="nav nav-tabs nav-stacked" id="classlist">
+                            
+                            {% for course in courses %}                                 
+
+                                <li id="{{course.course_id}}"><a href="#">{{ course.name }}</a></li>
+                                                       
+                            {% endfor %}
+                            
                         </ul>
                             
+                         {% endif %}
+                         
                     </div>
                     
+                    
                      <div id="rightclass">
+                        
+                        {% if isNewUser %}
+                        
+                        {% else %}
                          <table border="0" id="problemstable">
+                            {% for course in courses %}  
                              <tr>                                 
-                                 <td>1 lesson</td>
+                                 <td> {{course.nlectures}} lectures</td>
                                  <td >4 problems</td>
                                  <td >45 students</td>
                             </tr>
-                            <tr>                                 
-                                 <td>0 lessons</td>
-                                 <td>0 problems</td>
-                                 <td >10 students</td>
-                            </tr>
-                         </table>
+                             {% endfor %}
                             
+                         </table>
+                         
+                         {% endif %}    
                      </div>
                    
                  </div>     
